objects/pse__Project_Task_Dependency__c.object
<CustomObject>
    <customHelpPage>pse__ProjectTaskDependencyHelp</customHelpPage>
    <description>Specifies a relationship between two project tasks. If a project task is completed early or late, this has an effect on the start and end date of the task that succeeds it. You can create four standard types of dependency. Dependent tasks have a master-detail relationship with project task dependencies.</description>
    <fields>
        <fullName>pse__Cross_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this link between two tasks spans two projects</description>
        <inlineHelpText>Indicates if this link between two tasks spans two projects</inlineHelpText>
        <label>Cross Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Dependency_Display_Units__c</fullName>
        <description>Specifies the units of time used for project tasks. Valid values are hours or days. The default value is days.</description>
        <inlineHelpText>Specifies the units of time used for project tasks. Valid values are hours or days. The default value is days.</inlineHelpText>
        <label>Dependency Display Units</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Dependent_Task_End_Date_Time__c</fullName>
        <formula>pse__Dependent_Task__r.pse__End_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>End Date/Time of the dependent task.</inlineHelpText>
        <label>Dependent Task End Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Dependent_Task_End_Date__c</fullName>
        <formula>pse__Dependent_Task__r.pse__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>End Date of the dependent task.</inlineHelpText>
        <label>Dependent Task End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Dependent_Task_Start_Date_Time__c</fullName>
        <formula>pse__Dependent_Task__r.pse__Start_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Start Date/Time of the dependent task.</inlineHelpText>
        <label>Dependent Task Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Dependent_Task_Start_Date__c</fullName>
        <formula>pse__Dependent_Task__r.pse__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Start Date of the dependent task.</inlineHelpText>
        <label>Dependent Task Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Dependent_Task__c</fullName>
        <description>This master-detail lookup references the Project Task that is the dependent Task in this relationship.</description>
        <inlineHelpText>This master-detail lookup references the Project Task that is the dependent Task in this relationship.</inlineHelpText>
        <label>Dependent Task</label>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>Preceding Tasks</relationshipLabel>
        <relationshipName>Preceding_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Lag_Time_Hours__c</fullName>
        <inlineHelpText>Lag time of a project task dependency relationship. The default lag value is 0. Lag display units are in hours or days. Positive and negative lag values are permitted. A negative lag is effectively an overlap.</inlineHelpText>
        <label>Lag Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Lag_Units__c</fullName>
        <description>Displays the lag unit type as either hours or days.</description>
        <formula>$Setup.pse__Project_Task_Gantt_Global_Settings__c.pse__Task_Dependancy_Lag_Designation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the lag unit type as either hours or days.</inlineHelpText>
        <label>Lag Units</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__New_Dependency_Record__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if this record contains updated lag unit ignoring custom setting</description>
        <label>New Dependency Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Preceding_Task_End_Date_Time__c</fullName>
        <formula>pse__Preceding_Task__r.pse__End_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>End Date/Time of the preceding task.</inlineHelpText>
        <label>Preceding Task End Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Preceding_Task_End_Date__c</fullName>
        <formula>pse__Preceding_Task__r.pse__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>End Date of the preceding task.</inlineHelpText>
        <label>Preceding Task End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Preceding_Task_Start_Date_Time__c</fullName>
        <formula>pse__Preceding_Task__r.pse__Start_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Start Date/Time of the preceding task.</inlineHelpText>
        <label>Preceding Task Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Preceding_Task_Start_Date__c</fullName>
        <formula>pse__Preceding_Task__r.pse__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Start Date of the preceding task.</inlineHelpText>
        <label>Preceding Task Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Preceding_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup references the Project Task that is the preceding Task in this relationship.</description>
        <inlineHelpText>This lookup references the Project Task that is the preceding Task in this relationship.</inlineHelpText>
        <label>Preceding Task</label>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>Dependent Tasks</relationshipLabel>
        <relationshipName>Dependent_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <formula>pse__Dependent_Task__r.pse__Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Type__c</fullName>
        <inlineHelpText>The type of dependency relationship to be applied.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Finish to Start (FS)</fullName>
                    <default>true</default>
                    <label>Finish to Start (FS)</label>
                </value>
                <value>
                    <fullName>Start to Start (SS)</fullName>
                </value>
                <value>
                    <fullName>Finish to Finish (FF)</fullName>
                </value>
                <value>
                    <fullName>Start to Finish (SF)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project Task Dependency</label>
    <nameField>
        <displayFormat>PTD-{0}</displayFormat>
        <label>Project Task Dependency Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Task Dependencies</pluralLabel>
    <recordTypes>
        <fullName>TR_PS_Enterprise_Project_Task_Dependency</fullName>
        <active>true</active>
        <label>TR PS Enterprise Project Task Dependency</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>pse__Validate_Lag_Unit</fullName>
        <active>true</active>
        <errorConditionFormula>AND( pse__Lag_Time_Hours__c &lt;&gt; 0, 
            CONTAINS(LOWER(pse__Dependency_Display_Units__c),&apos;h&apos;), 
            CONTAINS(LOWER(pse__Dependent_Task__r.pse__Duration_Unit__c),&apos;d&apos;) )</errorConditionFormula>
        <errorMessage>The lag unit of a dependency can&apos;t be in hours when the duration of the successor task is in day units. Change the lag unit of the dependency, or change the duration unit of the successor task.</errorMessage>
    </validationRules>
</CustomObject>